Rapid Prd/src/objects/Partner_Category__c.object
<CustomObject>
    <description>This object holds the categories selected for each Partner Channel Account.</description>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Account_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Partner_Account_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>Partner_Lead__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>